60th Anv Update

--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -1733,7 +1733,7 @@ makes it easy to lose your place when trying to read them. &nbsp;The
 Green Book Of Gallifrey, and the the Little Black Book of Gallifrey
 speak of the Timewyrm, the end of the Universe and tells of a white
 hole catastrophe in the future. It should be noted that using green ink
-to write was considered to be very manners. The appearance of the
+to write was considered to be very bad manners. The appearance of the
 Timewryrm will signal that (in a general sense) the end of the Time
 Lords (and perhaps the Universe) is not far off. The Little Red Book of
 Gallifrey dealt with the Dark Time, magical incantations, Rassilon the
@@ -1742,7 +1742,9 @@ compact that forbids the Time Lords from reaching the Six-Fold Realm.
 The Other Scrolls have a prophecy of a Time Lord who will find the Lost
 Scrolls of Rassilon and will lead Gallifrey from darkness. Other
 important texts are The Triumphs of Rassilon, The Bones of the Dead,
-and the Runes of Rassilon. One book with a cover of reptile skin had
+and the Runes of Rassilon. The Crimson Spiral series had at least nine
+volumes and included the poem Tears of the Kotturuh. One book with a
+cover of reptile skin had
 the Seal of Rassilon on it. This book will survive until the end of the
 Universe and contains a last prophecy which terrifies the Doctor. </span><span class="A-fanon">This could well have been </span><span class="A-tv">the
 Matrix Prophacy of the Hybrid which stated that a hybrid of two warrior
@@ -1753,9 +1755,7 @@ Time, breaking a billion billion hearts to heal its own. </span><span class="A-f
 				<span class="A-audiobook">Rassilon ensures that hidden in all Gallifreyan DNA are 'killing lessons' to destroy Cacophony should she ever reappear.</span>
 				<br>
 				<p>
-					<span class="A-game">1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (1 year after the Eye of Harmony /</span>
-					<span class="A-licensed">
-						<span class="A-game"> 1 LD</span>
+					<span class="A-game">1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (1 year after the Eye of Harmony /</span><span class="A-licensed"><span class="A-game"> 1 LD</span>
 						<span class="A-game"> </span>day 10 /
 						<span class="A-game"> ~3,500,000,000 BC /
 							<span class="A-audiobook">4 generations after Omega started working on the Barriers / </span></span></span><span class="A-licensed">after the Eye of Harmony was installed / between Deadly Assassin and Invasion of Time)</span><span class="A-tv"><br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rassilon,</span>
@@ -3391,7 +3391,7 @@ story becomes a popular fairytale told to time-tots.
 				<p class="A-licensed">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;(before Slendor falls in love with Swowana)
 					<br>&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Master of Karn named Slendor the Destroyer (who had created the <span class="A-alternate">Ultimate</span>
-Doomesday Weapons for the now dead Kink Drextor) killed his father and
+Doomesday Weapons for the now dead King Drextor) killed his father and
 brother and flees to Outer
 Gallifrey becoming an Outler.&nbsp;He blames Rassilon and the Time
 Lords for these events.&nbsp;This
