--- a/rootimeline5.html
+++ b/rootimeline5.html
@@ -13003,63 +13003,43 @@ keeps a </span>
 					<span class="A-tv">on the
 						<span class="A-audiobook">Zenobia Time </span>station.</span>
 					<span class="A-tv"> &nbsp;
-						<span class="A-licensed">Most of Zenobia is left unused during Trial.&nbsp; Only
-							<span class="A-tv">Section 5&nbsp;is inhabited. &nbsp;</span>
-						</span>
-						<span class="A-tv">This court is made up of the Supreme Guardians of Gallifreyan Law and includes Inquisitor </span>
+						<span class="A-licensed">Most of Zenobia is left unused during th trial.&nbsp; Only
+							<span class="A-tv">Section 5&nbsp;is inhabited. </span></span><span class="A-tv">This court is made up of the Supreme Guardians of Gallifreyan Law and includes Inquisitor </span>
 						<span class="A-audiobook">Darkel,</span> the Valeyard and </span>
 					<span class="A-audiobook">Half the
 						<span class="A-fanon"> Inner</span> Council (who serve as Members of the Court).&nbsp;
 						<span class="A-tv"> </span>
 					</span>
 					<span class="A-tv">By this point in his lives the Doctor has been involved in several Gallifreyan Inquiries and has learned not to accept
-						legal aid.&nbsp; </span>
-					<span class="A-audiobook">
-						<span class="A-tv">The data from the Matrix has been altered by the Valeyard.</span>
-					</span>
-					<span class="A-tv">&nbsp;
-By the end of the Valeyard's prosecution the Inquisitor probably knows
-all about Operation Ravolox (if she didn't know before hand) make her
+						legal aid.&nbsp;</span><span class="A-audiobook"><span class="A-tv">The data from the Matrix has been altered by the Valeyard.</span> </span><span class="A-tv">By the end of the Valeyard's prosecution the Inquisitor probably knows
+all about Operation Ravolox (if she didn't know before hand) making her
 complicit in the cover-up.&nbsp; By order of the High Council, Crozier
 and Kiv are assassinated. &nbsp;Officially this was done to prevent
 Crozier's consciousness transference knowledge from becoming public,
 but in reality the Council feared Peri's testimony and wanted her
-eliminated. &nbsp; </span>
-					<span class="A-tv">The Doctor is furious when he thinks that Peri has been killed.&nbsp; </span>
-					<span class="A-audiobook"> This is the last time that the Doctor will feel like the situation is truly under someone else's control until No Future.
-						&nbsp;</span>
+eliminated. </span><span class="A-tv">The Doctor is furious when he thinks that Peri has been killed. </span><span class="A-audiobook">This is the last time that the Doctor will feel like the situation is truly under someone else's control until No Future.&nbsp;</span><span class="A-tv"><span class="A-audiobook">A splinter group of Time Lords arrange for</span>
+Peri to be saved and marry Yrconos. &nbsp;In his defense the Doctor is
+allowed to use the Matrix to predict several of the adventures of his
+future (assuming he isn't convicted).&nbsp; The Master interferes the
+Valeyard attempt to assassinate the entire court using a particle
+disseminator (a device capable of destroying even quarks and
+gravitons). <span class="A-game">This cause major damage to the Matrix.&nbsp;</span><span class="A-licensed">The Valeyard hopes to someday destroy all of the Time Lords, the Daleks, and the Cybermen, and then harness the power
+							of humanity.&nbsp;</span>The Doctor doesn't seem at all reluctant to leave his future self to die.&nbsp;</span><span class="A-tv"><span class="A-fanon"><span class="A-tv"><span class="A-audiobook">The Doctor loathes and despises the Valeyard because his very existence is proof of his ultimate failure to be the
+									Doctor.&nbsp;</span></span></span></span><span class="A-tv"></span><span class="A-audiobook">Many of the Doctor's memories of the trial (pertaining to his future) are deleted.&nbsp; </span>
 					<span class="A-tv">
-						<span class="A-audiobook">A splinter group of Time Lords arrange for</span> Peri to be saved and marry Yrconos. &nbsp;In his defense the Doctor
-						is allowed to use the Matrix to predict several of the adventures of his future (assuming he isn't convicted).&nbsp;
-						When the Master interferes the Valeyard attempt to assassinate the entire court using a Particle Disseminator (a device
-						capable of destroying even quarks and gravitons). &nbsp;
-						<span class="A-game">This cause major damage to the Matrix. </span>&nbsp;
-						<span class="A-licensed">The Valeyard hopes to someday destroy all of the Time Lords, the Daleks, and the Cybermen, and then harness the power
-							of humanity. &nbsp;</span>The Doctor doesn't seem at all reluctant to leave his future self to die.&nbsp;</span>
-					<span class="A-tv">
-						<span class="A-fanon">
-							<span class="A-tv">
-								<span class="A-audiobook">The Doctor loathes and despises the Valeyard because his very existence is proof of his ultimate failure to be the
-									Doctor. </span>
-							</span>
-						</span>
-					</span>
-					<span class="A-tv"> &nbsp;</span>
-					<span class="A-audiobook">Many of the Doctor's memories of the trial (pertaining to his future) are deleted.&nbsp; </span>
-					<span class="A-tv">
-						<span class="A-fanon">If he later recovered these memories it would explain why 7th Doctor has such omnicient understanding of his various
+						<span class="A-fanon">If he later recovered these memories, it would explain why 7th Doctor has such omnicient understanding of his various
 							adventures.
 							<span class="A-game">&nbsp;The Doctor learns that, though he has been deposed, he will be allowed to retain the titles of Defender of the
-								Laws of Time and Protector of the Gallifrey. &nbsp;He now has formal authorization to travel through time and space
-								and intervene to protect the Laws of Time and Gallifrey. &nbsp;
+								Laws of Time and Protector of the Gallifrey. He now has formal authorization to travel through time and space
+								and intervene to protect the Laws of Time and Gallifrey.&nbsp;
 							</span>
 						</span>
 					</span>
 					<span class="A-tv">
 						<br> &nbsp;&nbsp;&nbsp;&nbsp;
 						<span class="A-fanon">Interestingly the Valeyard doesn't bring up the Doctor's interference on Frontios despite it being outside the noosphere.&nbsp;
-							This might mean that the Surveillance System installed "on his last visit to Gallifrey" was installed on some missing
-							adventure to Gallifrey set after Frontios and not during Arc of Infinity as is traditionally thought.
+							This might mean that the surveillance system installed "on his last visit to Gallifrey" was installed on some missing
+							adventure to Gallifrey set after Frontios and not during Arc of Infinity, as is traditionally thought.
 							<br> &nbsp;&nbsp;&nbsp;&nbsp; It could be argued that all of the Doctors fought to prevent the "catharsis of spurious
 							morality."
 							<br>
@@ -13088,49 +13068,22 @@ eliminated. &nbsp; </span>
 					<br>
 					<span class="A-audiobook">
 						&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Eight Doctors:
-						<span class="A-tv">The Master exposes the Ravalox Stratagem </span>by presenting a recording of the entire trial to every home,&nbsp;
-					</span>
-					<span class="A-audiobook">recreation center, library, and university on Gallifrey. &nbsp;A Committee of Inquiry is started by the Doctor.&nbsp;
-						</span>
-					<span class="A-tv">The Master </span>
+						<span class="A-tv">The Master exposes the Ravalox Stratagem </span>by presenting a recording of the entire trial to every home,&nbsp;</span><span class="A-audiobook">recreation center, library, and university on Gallifrey.&nbsp;A Committee of Inquiry is started by the Doctor.&nbsp;</span><span class="A-tv">The Master </span>
 					<span class="A-audiobook"> and the CIA </span>
-					<span class="A-tv">try to take over Gallifrey. &nbsp;</span>
-					<span class="A-game">Master enlists the aid of his supporters on Gallifrey, including CIA Operative Jonuratanandrusa (Joe) and Cardinal Arkendo.</span>
-					<span class="A-audiobook">&nbsp; CIA commandos stage a revolution by pretending to be Outsiders.
+					<span class="A-tv">try to take over Gallifrey.&nbsp;</span><span class="A-game">Master enlists the aid of his supporters on Gallifrey, including CIA Operative Jonuratanandrusa (Joe) and Cardinal Arkendo.</span><span class="A-audiobook"> CIA commandos stage a revolution by pretending to be Outsiders.
 					</span>
-					<span class="A-audiobook">&nbsp;
-						<span class="A-tv">&nbsp;</span>
-					</span>
-					<span class="A-tv">The old High Council is deposed
+					<span class="A-audiobook"><span class="A-tv"></span></span><span class="A-tv">The old High Council is deposed
 						<span class="A-licensed">and Gallifrey began to collapse into chaos.</span>
 					</span>
-					<span class="A-game">&nbsp;Large amounts of the Capital are damaged. &nbsp;</span>
-					<span class="A-audiobook">
-						<span class="A-game">The events of the Imperator Presidency, and every crisis since then has led up to the revolution that started in Trial
-							of a Time Lord. &nbsp;</span>
+					<span class="A-game">Large amounts of the Capital are damaged.&nbsp;</span><span class="A-audiobook"><span class="A-game">The events of the Imperator Presidency, and every crisis since then has led up to the revolution that happens here.</span>
 					</span>
-					<span class="A-game">Flavia kills Cardinal Arkendo with a staser. &nbsp;Joe realizes that the Master is a force for evil and renounces his
-						alliance with the dark lord. &nbsp;Joe will remain with the CIA.</span>
-					<span class="A-tv">
-						<span class="A-audiobook"> &nbsp;</span>
+					<span class="A-game">Flavia kills Cardinal Arkendo with a staser. Joe realizes that the Master is a force for evil, and renounces his
+						alliance with the dark lord.&nbsp;Joe will remain with the CIA.</span><span class="A-tv"><span class="A-audiobook"></span>
 					</span>
 					<span class="A-tv">
-						<span class="A-audiobook">It was then that Borusa returned and held the Presidency temporarily until a </span>new High Council is elected.</span>
-					<span class="A-audiobook"> &nbsp;Flavia becomes the 412th President of Gallifrey and Borusa disappeared.
-					</span>
-					<span class="A-tv">
-						<span class="A-fanon">
-							<span class="A-tv"></span>
-						</span>
-					</span>
-					<span class="A-audiobook">
-						<span class="A-tv">&nbsp;</span>
-					</span>
-					<span class="A-audiobook">
-						<span class="A-tv">The Master and Glitz are captured.&nbsp; The Master escapes
+						<span class="A-audiobook">It is at this point that Borusa returns and held the Presidency temporarily until a </span>new High Council is elected.</span><span class="A-audiobook">&nbsp;Flavia becomes the 412th President of Gallifrey and Borusa disappeares.</span><span class="A-tv"><span class="A-fanon"><span class="A-tv"></span>&nbsp;</span></span><span class="A-audiobook"><span class="A-tv"></span></span><span class="A-audiobook"><span class="A-tv">The Master and Glitz are captured. The Master escapes
 							<span class="A-audiobook">
-								in his TARDIS after killing some technicians.&nbsp; </span>
-						</span>Glitz is released from Gallifrey. </span>
+								in his TARDIS after killing some technicians.&nbsp;</span></span>Glitz is released from Gallifrey. </span>
 					<span class="A-audiobook">
 						<span class="A-tv">The Valeyard secretly assumes the role of the Keeper of the Matrix. </span>
 					</span>
@@ -13147,7 +13100,7 @@ eliminated. &nbsp; </span>
 						<span class="A-game">
 							<span class="A-game">(right after Trial of a Time Lord)&nbsp;&nbsp;&nbsp;
 								<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Ghosts of Justice:
-								&nbsp;The Zenobia time station is put in orbit around Gallifrey. &nbsp;At the&nbsp;</span>
+								&nbsp;The Zenobia time station is put in orbit around Gallifrey.&nbsp;At the&nbsp;</span>
 						</span>
 					</span>
 					<span class="A-tv">
@@ -13175,8 +13128,7 @@ eliminated. &nbsp; </span>
 						<span class="A-game">Rozinel, </span>
 					</span>
 					<span class="A-game">
-						<span class="A-game"> is captured and leads the Time Lords to his Merast Base.&nbsp; Merast is destroyed but the Master escapes. </span>&nbsp;</span>
-					<span class="A-audiobook">The High Council has Earth returned to its original</span>
+						<span class="A-game"> is captured and leads the Time Lords to his Merast Base.&nbsp; Merast is destroyed but the Master escapes.&nbsp;</span></span><span class="A-audiobook">The High Council has Earth returned to its original</span>
 					<span class="A-audiobook"> coordinates.&nbsp;</span>
 					<span class="A-game">
 						<span class="A-game">The Prydonian Rozinelastorameth (Rozinel) is executed by order of the High Council.&nbsp;</span>
@@ -13226,7 +13178,7 @@ it to or not.&nbsp; </span>
 				<span class="A-fanon">
 					<span class="A-game">900&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (probably right after Trial of a Time Lord)
 						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Timewarp: The Doctor returns to Thoros
-						Beta to check on Peri but finds that in the lower levels of the cave system Crozier has placed the clones of Time Lords
+						Beta to check on Peri but finds that in the lower levels of the cave system Crozier has placed clones of Time Lords
 						from the end of the Time War. &nbsp;The minds of these Time Lords have escaped from the Final Battle and are transfered
 						into the clones. &nbsp;The 6th Doctor teams up with 3 other future incarnations of himself (probably the War Doctor,
 						10th and 11th Doctors after Day of the Doctors) to stop them. &nbsp;</span>
@@ -13245,16 +13197,7 @@ it to or not.&nbsp; </span>
 					<br>
 					<br>
 					<span class="A-game">900~ &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; (after the revolution in Trial of a Time Lord)
-						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span>
-				</span>
-				<span class="A-audiobook">
-					<span class="A-licensed">It takes a long time to restore order on Gallifrey. &nbsp;</span>
-				</span>
-				<span class="A-tv">
-					<span class="A-game"></span>
-				</span>
-				<span class="A-audiobook">
-					<span class="A-game">By this point the&nbsp;</span>
+						<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span></span><span class="A-audiobook"><span class="A-licensed">Niroc and his coherts are d-mated removing them from history. It takes a long time to restore order on Gallifrey.</span>&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-game">By this point the&nbsp;</span>
 				</span>
 				<span class="A-audiobook">
 					<span class="A-game"></span>
@@ -13269,11 +13212,7 @@ it to or not.&nbsp; </span>
 					<span class="A-game"> most Gallifreyans </span>
 				</span>
 				<span class="A-audiobook">
-					<span class="A-game">have changed. &nbsp;The idea of adhering&nbsp;to the Doctrine of Non-Interference is viewed as being naive or even absurd.
-						&nbsp;</span>
-				</span>
-				<span class="A-tv">
-					<span class="A-game">The events of the Ravalox Incident lead to a mandate that all Matrix projections used in court had to be backed up by
+					<span class="A-game">have changed. The idea of adhering&nbsp;to the Doctrine of Non-Interference is viewed as being naive or even absurd.&nbsp;</span></span><span class="A-tv"><span class="A-game">The events of the Ravalox Incident lead to a mandate that all Matrix projections used in court had to be backed up by
 						physical evidence and witness testimony.
 					</span>
 				</span>
@@ -13367,21 +13306,24 @@ it to or not.&nbsp; </span>
 				</span>
 				<br>
 				<span class="A-fanon">
-					<span class="A-game">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; The High Council of Gallifrey appoints
-						the Gallifrey Examining Commission to stop the Great Famine which has affected hundreds of worlds.&nbsp; </span>
+					<span class="A-game">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; The High Council of Gallifrey appoints<span class="A-licensed">
+						the Gallifrey Examining Commission </span>to stop the Great Famine which has affected hundreds of worlds.&nbsp; </span>
 				</span>
 				<span class="A-fanon">
 					<span class="A-game">
-						<span class="A-fanon">This Great Famine is probably not part of the original Web of Time.</span>&nbsp; The Time Lords</span>
-				</span>
+						<span class="A-fanon">This Great Famine is probably not part of the original Web of Time.</span>&nbsp; <span class="A-licensed">The Time Lords</span></span><span class="A-licensed">
+				</span></span>
 				<span class="A-fanon">
-					<span class="A-game"> begin shipping refugees to other planets and set up a sector of outer Gallifrey (just north of the city of Prydos) to
-						serve as a refugee camp called Riff Town for millions of starving refugees.&nbsp; This includes Zagaroth, Yumi, Muselians,
+					<span class="A-game"><span class="A-licensed"> begin shipping refugees to other planets and set up a sector of outer Gallifrey (just north of the city of Prydos) to
+						serve as a refugee camp called Riff Town for millions of starving refugees.</span>&nbsp; This includes Zagaroth, Yumi, Muselians,
 						Irrs, Shua, Spicans, Fomulhaut Amphibians, Adharan Mammoth Hybrids, Achernari, Deneb Clusters, humanoids from Altair,
 						Zeta Cancri and thousands of humans from Earth in the year 2359.&nbsp;&nbsp;
-						<span class="A-fanon"></span> The food stuff Promaze is created - a food almost any species can live off of.&nbsp; It tastes like green pond
-						slime.&nbsp; The Malian provide security in Riff Town.
-						<br>
+						<span class="A-fanon A-licensed"></span><span class="A-licensed">
+The food stuff Promaze is created - a food almost any species can live
+off of.&nbsp; It tastes like green pond slime.&nbsp; The Malian provide
+security in Riff Town, using stun guns and armored skimmers. The
+Gallifrey Examining Commission even selects some aliens to attend the
+Academy. </span><br>
 						<br>??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (probably during the 6th Doctor era)
 						<br>
 					</span>
@@ -14757,7 +14699,7 @@ Doctor strives to always defy Death no matter the consequences. <span class="A-a
 					<span class="A-audiobook">
 The Doctor and Romana deal with Vampires. The Committee of Three try to
 kill Rassilon, rescue Borusa and take over the Galaxy. The Committee is
-executed.&nbsp;</span>
+executed. <span class="A-licensed">President Flavia gets Romana a seat on the High Council.&nbsp;</span></span>
 				</p>
 				<p>
 					<span class="A-audiobook">
