--- a/rootimeline6.html
+++ b/rootimeline6.html
@@ -185,12 +185,7 @@
 			</div>
 			<br>
 			<div class="quote">
-				<span class="A-tv">“It
-was on the planet Skaro that my old enemy the Master was finally put on
-trial. They say he listened calmly as his list of evil was read and
-sentence passed. Then he made his last, and I thought somewhat curious,
-request. He demanded that I, the Doctor, a rival Time Lord, should take
-his remains back to our home planet, Gallifrey. <br>It was a request they should never have granted...” </span>
+				<span class="A-tv">“It was on the planet Skaro that my old enemy the Master was finally put on trial. They say he listened calmly as his list of evil was read and sentence passed. Then he made his last, and I thought somewhat curious, request. He demanded that I, the Doctor, a rival Time Lord, should take his remains back to our home planet, Gallifrey. <br>It was a request they should never have granted...” </span>
 			</div>
 			<div class="speaker">
 				<span class="A-tv"> - The Doctor</span>
@@ -271,8 +266,7 @@ his remains back to our home planet, Gallifrey. <br>It was a request they should
 		</div>
 	<div class="section">
 		<p style="margin-bottom: 0in;">
-			<span class="A-audiobook">1009</span>
-			<span class="A-licensed">.76</span>
+			<span class="A-audiobook">1009</span><span class="A-licensed">.76</span>
 			&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 
 			<span class="A-audiobook">(about 2.5 years before Vampire Science / </span>
 			<span class="A-tv">Local Dateline </span>
@@ -281,8 +275,7 @@ his remains back to our home planet, Gallifrey. <br>It was a request they should
 			<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 			<span class="A-tv">Doctor Who: </span><span class="A-game">The Enemy Within: </span>The Master is put on trial by the Daleks and exterminated. </span>
 			<span class="A-tv">The Doctor travels to
-				<span class="A-audiobook">the fake </span>Skaro created by the Daleks and collects the remains. &nbsp;</span>
-			<span class="A-tv">The Master steals </span>
+				<span class="A-audiobook">the fake </span>Skaro created by the Daleks and collects the remains.&nbsp;</span><span class="A-tv">The Master steals </span>
 			<span class="A-audiobook">his 16th</span>
 			<span class="A-tv"> body but a human body doesn't last long
 				<span class="A-licensed">when trying to hold a Time Lord. </span>
@@ -297,8 +290,7 @@ his remains back to our home planet, Gallifrey. <br>It was a request they should
 			<span class="A-tv"> the Master to be sucked into the Eye of Harmony, </span>
 			<span class="A-audiobook">knowing that he will become the god of the empty universe of anti-matter he will find there. &nbsp;The Master </span>
 			<span class="A-licensed">is consumed by the TARDIS and </span>
-			<span class="A-audiobook">lives within it's singularity with absolute power of that universe. &nbsp;</span>
-			<span class="A-licensed">He will eventually learn how to control the TARDIS to some degree.</span>
+			<span class="A-audiobook">lives within it's singularity with absolute power of that universe.&nbsp;</span><span class="A-licensed">He will eventually learn how to control the TARDIS to some degree.</span>
 			<span class="A-audiobook"> </span>
 			<span class="A-tv">&nbsp;The Eye also revives the dead humans Change Lee and Grace Holloway
 				<span class="A-game"> (making them immortal fixed points in time like Jack Harkness). </span>
@@ -3181,7 +3173,8 @@ incarnation. </span>
 						the title of Lady President. &nbsp;At first, Romana decides to give this Gallifrey the power of the EOH so that she
 						can obtain a timeship and escape.&nbsp; She determines that there are 13 billion Krillic are trapped in Eye.&nbsp;
 						In order to safe-guard the Axis, Romana has K-9 deactivate the Axis Portal.&nbsp; This leaves Romana, Leela, and Narvin
-						trapped within the Axis in a truncated timeline. &nbsp;
+						trapped within the Axis in a truncated timeline.</span></li><li><span class="A-audiobook">&nbsp; &nbsp; &nbsp; Emancipation: Takes place </span>
+					<span class="A-audiobook">9 Months after Forever. </span><span class="A-audiobook">&nbsp;&nbsp;
 						<br>
 					</span>
 					<span class="A-audiobook">&nbsp;
@@ -3190,11 +3183,7 @@ Romana's second term. &nbsp;Romana acquires a copy of the uninfected
 biodata files of this Gallifrey's population. &nbsp; <br>
 					</span>
 					<span class="A-audiobook">&nbsp; &nbsp; &nbsp; Arbitration: Begins nearly a year after Forever, and lasts about 3 days. &nbsp;
-						<br>
-					</span>
-					<span class="A-audiobook">&nbsp; &nbsp; &nbsp; Emancipation: Takes place </span>
-					<span class="A-audiobook">9 Months after Arbitration. &nbsp;
-						<br>&nbsp; &nbsp; &nbsp; Extermination:&nbsp;</span>
+						</span><span class="A-audiobook"></span><span class="A-audiobook"><br>&nbsp; &nbsp; &nbsp; Extermination:&nbsp;</span>
 					<span class="A-audiobook">When the Daleks from the Prime Timeline invade this Gallifrey, Romana destroys them and returns to the Axis. &nbsp;
 						<br>
 					</span>
@@ -3269,19 +3258,14 @@ biodata files of this Gallifrey's population. &nbsp; <br>
 			</span>
 			<span class="A-audiobook">
 				<span class="A-game">Mind of the Daleks: The Daleks travel back in time and steal the Matrix secrets from Ravolox, so that they can infiltrate
-					the Matrix. &nbsp;</span>
-			</span>
-			<span class="A-audiobook">The Daleks invade the Matrix. &nbsp;Their presence&nbsp;partially disables the Matrix because they are </span>
-			<span class="A-audiobook">drawing power and increasing the virtual entropy.&nbsp; This is slowly killing the Matrix.&nbsp;</span>
-			<span class="A-audiobook">
-				<span class="A-game">&nbsp;</span>
+					the Matrix. </span></span><span class="A-audiobook">The Daleks invade the Matrix. Their presence&nbsp;partially disables the Matrix because they are </span>
+			<span class="A-audiobook">drawing power and increasing the virtual entropy. This is slowly killing the Matrix.&nbsp;</span><span class="A-audiobook"><span class="A-game"></span>
 			</span>
 		</p>
 		<p>
 			<span class="A-audiobook">
 				<span class="A-fanon">1090??&nbsp;&nbsp;</span>&nbsp; (over 2 years after Reborn / right before Renaissance)
-				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Extermination:&nbsp;</span>
-			<span class="A-audiobook">The Daleks have invaded the Axis and used it to conquer numerous truncated timelines.&nbsp; The Dalek’s Coordinator predicts
+				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Extermination:&nbsp;</span><span class="A-audiobook">The Daleks have invaded the Axis and used it to conquer numerous truncated timelines.&nbsp;The Dalek’s Coordinator predicts
 				which universes will be viable for conquest.&nbsp; </span>
 			<span class="A-audiobook">When the Daleks from the Prime Timeline invade the alternate Gallifrey that Prime Romana rules, she destroys them and
 				use their gateway to return to the Axis. &nbsp;Leela and Narvin re-take the Axis from the Daleks and seal all the truncated
@@ -3292,7 +3276,7 @@ biodata files of this Gallifrey's population. &nbsp; <br>
 				<span class="A-fanon">1090??&nbsp;&nbsp;</span>&nbsp; </span>
 			<span class="A-audiobook">(many years after&nbsp;</span>
 			<span class="A-audiobook">
-				<span class="A-audiobook">Panacea</span>
+				<span class="A-audiobook">Panacea</span> / weeks after Extermination
 			</span>
 			<span class="A-audiobook">)
 				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;Renaissance: </span>
