--- a/rootimeline7.html
+++ b/rootimeline7.html
@@ -5029,6 +5029,12 @@ specific desired outcomes.&nbsp;</span>
 				War. &nbsp; </span>
 		</span>
 	</p>
+	<figure>
+		<img src="images/timewarcreatures.jpg" alt="Never-Weres">
+		<figcaption>
+			<span class="A-licensed">The Never-Weres</span>
+		</figcaption>
+	</figure>
 	<p>
 		<span class="A-tv">??&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; (after the Master goes into hiding /</span>
 		<span class="A-tv"> during the final days of the Time War)</span>
@@ -5037,38 +5043,14 @@ specific desired outcomes.&nbsp;</span>
 		<span class="A-tv">It is an all-consuming War of </span>
 		<span class="A-audiobook">chaos and denial</span>
 		<span class="A-tv">
-			with the whole of creation at stake.</span>
-		<span class="A-notbbc">&nbsp;</span>
-		<span class="A-audiobook"> </span>
+			with the whole of creation at stake. </span>
 		<span class="A-tv">
 			<span class="A-audiobook">
-				<span class="A-game">The Time Lords burn worlds to ashes, or lock them in time loops. </span>&nbsp;In some cases they disassemble entire Galaxies.
-				&nbsp;</span>
+				<span class="A-game">The Time Lords burn worlds to ashes, or lock them in time loops. </span>In some cases they disassemble entire Galaxies. </span>
 		</span>
-		<span class="A-audiobook">The War is fought throughout history,&nbsp;
-		</span>
+		<span class="A-audiobook">The War is fought throughout history, </span>
 		<span class="A-tv">
-			<span class="A-licensed">though every Time, b</span>
-		</span>
-		<span class="A-audiobook">
-			<span class="A-licensed">ut m</span>
-		</span>
-		<span class="A-tv">
-			<span class="A-licensed">
-				<span class="A-fanon"></span>
-			</span>
-		</span>
-		<span class="A-audiobook">
-			<span class="A-licensed"></span>
-		</span>
-		<span class="A-audiobook">
-			<span class="A-licensed">ost of the battles take place in the </span>
-		</span>
-		<span class="A-tv">
-			<span class="A-licensed">and No Time of the&nbsp;</span>
-		</span>
-		<span class="A-audiobook">
-			<span class="A-licensed">Vortex.&nbsp; </span>
+			<span class="A-licensed">though every Time, but most of the battles take place in the No Time of the Vortex. </span>
 		</span>
 		<span class="A-game">By this point the Time War has covered a billion years.&nbsp;</span>
 		<span class="A-tv">
@@ -5076,8 +5058,7 @@ specific desired outcomes.&nbsp;</span>
 		</span>
 		<span class="A-tv">
 			<span class="A-tv">While the war is technically invisible to smaller species (including most&nbsp;humans of the 21st century),
-				<span class="A-game">
-				many </span>
+				<span class="A-game">many </span>
 			</span>
 		</span>
 		<span class="A-game">members of these species find themselves experiencing a deep sense of unease on a subconscious level. </span>
