--- a/rootimelord.html
+++ b/rootimelord.html
@@ -316,9 +316,9 @@ distress as their personal timeline adjusts and syncs to the looping
 nature of the oubliette. </span>
 			</div>
 			
-			<div class="section">
-				<span class="A-audiobook"><span class="A-tv"><br></span></span><span class="A-audiobook"></span>
-			</div>
+
+				<br>
+
 
 			<div class="box">
 				<div class="article">
@@ -742,7 +742,15 @@ incarnation their timeline will being unraveling. They will have only <span clas
 					but this must be done within an hour of death or with a cinerary urn. They are however still capable of using the Reflex
 					Link if another Time Lord contacts them. </span>
 			</div>
+
+
 			<div class="section">
+				<figure>
+					<img src="images/watcher.jpg" alt="a Watcher">
+					<figcaption>
+						<span class="A-tv">A Watcher</span>
+					</figcaption>
+				</figure>
 				<span class="A-audiobook">Time Lords actually use their symbiotic nuclei to govern their regenerations. </span>
 				<span class="A-fanon">Because of this, </span>
 				<span class="A-audiobook">it is not uncommon for </span>
@@ -809,11 +817,9 @@ infecting the past and future.&nbsp;</span>&nbsp; </span>
 		</div>
 		<div class="article" id="tlacademy" style="padding-top: 160px; margin-top: -160px;">
 			<figure>
-				<img src="images/deca.jpg" alt="Academy Seal">
+				<img src="images/academy.jpg" alt="the Time Academy">
 				<figcaption>
-					<span class="A-tv">A seal associated with being a Time Lord</span>
-					<br>
-					<span class="A-fanon"> Perhaps the Seal of the Time Academy?</span>
+					<span class="A-licensed">The Time Academy</span>
 				</figcaption>
 			</figure>
 			<p style="text-align: center;">
@@ -831,8 +837,7 @@ my actions and my thoughts." </em>
 			<h2>THE PRYDONIAN ACADEMY OF TIME
 				<br>The University, The Time Lord Academy</h2>
 			<div class="section">
-				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was an honor they have to earn.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only academy that can grant the title of Time Lord</span>
-– so all would-be Time Lord</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook">have to be inducted there after graduating<span class="A-game"> from the 5th grade of </span>their chapter’s academy. Novices take </span><span class="A-audiobook">the entrance examination while still in brainbuffing and it is judged by Adjudicators.</span><span class="A-audiobook"> </span><span class="A-game"><span class="A-licensed">Failure was one of the major fears of every 7 year-old.</span></span><span class="A-fanon">
+				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was an honor they have to earn.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only academy that can grant the title of Time Lord </span>– so all would-be Time Lord</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook">have to be inducted there after graduating<span class="A-game"> from the 5th grade of </span>their chapter’s academy. Novices take </span><span class="A-audiobook">the entrance examination while still in brainbuffing and it is judged by Adjudicators.</span><span class="A-audiobook"> </span><span class="A-game"><span class="A-licensed">Failure was one of the major fears of every 7 year-old.</span></span><span class="A-fanon">
 						</span><span class="A-audiobook A-fanon"></span><span class="A-game">If they are score is accepted then, after 12 years
 							<span class="A-tv">with their chapter's academy, they can be enrolled in the <span class="A-audiobook">Prydon</span> Time Academy. </span></span><span class="A-audiobook">Enrollment begins with the Ceremony of Matriculation. </span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-game"><span class="A-tv"> </span></span><span class="A-fanon">
 For more information on pre-Time Academy schooling see </span><a class="A-fanon A-notbbc" href="roolifedeath.html#academy">Academies</a><span class="A-fanon A-notbbc"></span><br><span class="A-game"><span class="A-tv"><br></span></span><span class="A-licensed">The education of a Time Lord is considered to be an honor and a privilege,</span>
@@ -873,7 +878,7 @@ acheive the rank of Junior Grade Time Lord. Its students are forbidden from clim
 				<span class="A-audiobook">The Great Curriculum of the Academy has a Codex of Disciplines that they teach. </span>
 				<span class="A-licensed">The
 Codex focuses on Dimensional Engineering, </span><span class="A-licensed"><span class="A-audiobook">Stellar&nbsp;Engineering,</span></span><span class="A-licensed"><span class="A-audiobook"> </span></span><span class="A-licensed">Dimensional Science,&nbsp;TT
-Capsule Construction,&nbsp;The Laws of Time,&nbsp;<span class="A-audiobook"></span></span><span class="A-licensed"><span class="A-audiobook"></span></span><span class="A-licensed"><span class="A-audiobook"></span><span class="A-tv">Cosmic Science, <span class="A-audiobook">Spatial Cartography, </span>TARDIS
+Capsule Construction,&nbsp;The Laws of Time,&nbsp;<span class="A-audiobook"></span></span><span class="A-licensed"><span class="A-audiobook"></span></span><span class="A-licensed"><span class="A-audiobook"></span><span class="A-tv">Cosmic Science,&nbsp;<span class="A-audiobook">Matrix Diagnostics, Spatial Cartography, </span>TARDIS
 Operation and Maintenance, </span>Transcendental Dimensions, </span>
 				<span class="A-licensed"><span class="A-tv">Recreational Mathematics (including happy prime numbers),</span> Thermodynamics, Touch Telepathy, Languages, Future History,
 					Temporal Classics, and Stasis Cube Art. </span>
@@ -886,18 +891,21 @@ Operation and Maintenance, </span>Transcendental Dimensions, </span>
 				<span class="A-tv">The students learn to stop their hearts and feign death. </span>
 				<span class="A-audiobook">Engineering Theory class covers (among other things) the construction of spacecraft. Psychic field manipulation is standard
 					training in the 2nd year at the Academy <span class="A-licensed">as is the science of Temporal Stasis.</span> At around 60 years old they are taught Tri-bio-physics. </span><span class="A-fanon"><span class="A-tv">Some Time Lords (like the Doctor) have learned 5,000,000,000 languages.
-						<span class="A-game"></span></span></span><span class="A-audiobook">As part of their
+						<span class="A-game"></span></span></span><span class="A-audiobook">Most Time Ladies learn how to play the harp. As part of their
 					<span class="A-licensed">Future</span> History classes, they study videos of fixed points in history, including the Cro-magnon period on the
 					Earth. </span>
 				<span class="A-audiobook">Academy History Module 101 includes studying Assyrian cosmic influence. </span><span class="A-tv">The Book of the Old Time
-						is Gallifrey's oldest reliable history book. &nbsp;written.
+						is Gallifrey's oldest reliable history book.
 					</span>
 					<span class="A-licensed">
 						<span class="A-tv">This sets down the"official" version of Time Lord History. The book describes the Dark Times and the Time of Legend,</span></span><span class="A-licensed"> </span><span class="A-licensed">but doesn't&nbsp;mention Omega, the Other, or the rule
-of Pythias.</span><span class="A-audiobook"> Chapter 13 of the Galactic History Primer covers
-					the Daemons. Academy students are forbidden to study the later Human Era because it is outside the influence of the
-					Time Lords. The reason for this decree has been lost over the thousands of years of Gallifreyan civilization. No course
-					in hydrology is offered at the Academy. <br><br>Students spend a great deal of time chanting their lessons and are always watched
+of Pythias.</span><span class="A-audiobook">
+Gallifreyan Archeologists are responsible for all studies of the time
+before Rassilon. Chapter 13 of the Galactic History Primer covers the
+Daemons. Academy students are forbidden to study the later Human Era
+because it is outside the influence of the Time Lords. The reason for
+this decree has been lost over the thousands of years of Gallifreyan
+civilization. No course in hydrology is offered at the Academy. <br><br>Students spend a great deal of time chanting their lessons and are always watched
 					closely while working on a project.&nbsp;</span><span class="A-audiobook"></span>
 				<span class="A-game">Some of the information in a Time Lord's mind takes the form of memory traces rather then actual experiences.&nbsp;</span><span class="A-fanon">These could relate to the high speed information exchange when Gallifreyans uses telepathic entrelacement.&nbsp;</span><span class="A-audiobook"></span><span class="A-licensed">Schooling is segregated by ability based on test results. </span>
 				<span class="A-audiobook">A
@@ -907,7 +915,7 @@ Distinction/Insightful/Outstanding. </span><span class="A-audiobook">No Gallifre
 					Time Academy.</span><br><span class="A-audiobook">&nbsp;</span><span class="A-fanon"><span class="A-tv"><span class="A-game"><br>Most students choose a few specific disciplines to focus on but, over the decades, become well trained in a variety
 							of minor topics as well.&nbsp;</span></span></span><span class="A-audiobook">Students at the Academy
 have partial access to the Matrix. Some join zero-grav hyperball teams,&nbsp;</span><span class="A-licensed">others take part in Academy Sprint Championships.&nbsp;</span><span class="A-game">Older children on Gallifrey often construct Time-Space Visualizer to play with as a learning experience.<span class="A-audiobook"> </span></span><span class="A-licensed"> <span class="A-audiobook">Some
-Junior Time Lords use Eye Filters to help them escape the notice of
+Junior Time Lords use eye filters to help them escape the notice of
 their tutors. The filter takes the form of a bio-chip that is powered
 by the user’s artron energy.&nbsp; It requires a lot of concentration
 to work, and most Gallifreyans can achieve only a low level perception
@@ -978,6 +986,14 @@ the Web of Time has been dependent on the Time Lords for so long,</span>
 				<span class="A-audiobook">A Junior Time Lord's score on these tests is often used a way of predicting their future career as a Time Lord.&nbsp;<span class="A-licensed"></span> </span>
 			</div>
 			<div class="section">
+				<figure>
+					<img src="images/deca.jpg" alt="Academy Seal">
+					<figcaption>
+						<span class="A-tv">A seal associated with being a Time Lord</span>
+						<br>
+						<span class="A-fanon"> Perhaps the Seal of the Time Academy?</span>
+					</figcaption>
+				</figure>
 				<p style="text-align: center;">
 					<em>
 						<span class="A-licensed">I understand the importance of my sacred position. I will not meddle with Time. I will respect the traditions of Gallifrey</span>
@@ -1002,7 +1018,7 @@ final preparations right before their graduation ceremony.&nbsp;</span><span cla
 				<span class="A-licensed">The graduating Time Lord </span>
 				<span class="A-game">generally has the equivalent of a human Masters in all technical and scientific disciplines, </span>
 				<span class="A-licensed">and knows enough about temporal physics to destroy the Web of Time.&nbsp;</span><span class="A-game"><span class="A-licensed">Graduates work as servants, guards, technicians, and minor administrators. The most highly qualified graduates serve as </span>assistants and <span class="A-licensed">apprentices for a Senior Time Lord,</span> and work as crew members
-					on his TARDIS during research trips.&nbsp;<span class="A-audiobook">After graduation, some Time Lords attend night-school to further their education and careers.</span> </span>
+					on his TARDIS during research trips.&nbsp;<span class="A-audiobook">After graduation, some Time Lords attend night-school to further their education or start a new careers.</span> </span>
 			</div>
 		</div>
 		<div class="article" id="tlsenior" style="padding-top: 160px; margin-top: -160px;">
@@ -1155,9 +1171,9 @@ and those who have truly mastered a field are treated almost as gods by
 other Gallifreyans. More introverted Time Lords prefer the company of
 their symbiotically bonded TARDIS and shun most other social
 interaction. Many of these shut-ins pursue a career in TARDIS
-engineering. Over the thousands of years of their lives most Time Lords
+engineering. </span><span class="A-audiobook">Timeship Demolition Coordinator is considered to be a boring, dead-end job. </span><span class="A-game">Over the thousands of years of their lives most Time Lords
 will fight off boredom by changing the academic focus of their research
-several times.<br><br> </span>
+several times. </span><span class="A-audiobook">Some Time Lords take night-school courses, such as Matrix Diagnostics, to start a new career.</span><br><span class="A-game"><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-tv">The ceremonial robes, collars, and makeup of the Time Lords are worn only for special occasions. </span>
