--- a/index.html
+++ b/index.html
@@ -227,6 +227,22 @@
 					<a href="https://youtu.be/YNO0L9cN1kE" target="_blank">Ep 7: An Unearthly Woman</a> 
 					<br> 
 					<span class="A-fanon">A look at the audio 'An Unearthly Woman,' the Dr's time at 76 Totter's Lane, TARDIS Power Cells, and the identity of I.M. Foreman?</span>
+					<br> 
+					<a href="https://youtu.be/aJ3_6CcQ9aw" target="_blank">Ep 8: An Unearthly Child</a> 
+					<br> 
+					<span class="A-fanon">A look at the first story, 'An Unearthly Child'. We also tackle the Gallifreyan process of Brainbuffing, and the TARDIS's Isomorphic Security System. </span>
+					<br> 
+					<a href="https://youtu.be/hmPfkGCxhj4" target="_blank">Ep 9: The Three Brothers Gruff</a> 
+					<br> 
+					<span class="A-fanon">A look at the Time Lord Fairy Tale 'The Three Brothers Gruff' and early Gallifreyan History. We also tackle Shobogan biology, and the TARDIS's Autocleaning Systems.   </span>
+					<br> 
+					<a href="https://youtu.be/IRucOlmMEb0" target="_blank">Ep 10: Jak and the Wormhole</a> 
+					<br> 
+					<span class="A-fanon">A look at the Time Lord Fairy Tale 'Jak and the Wormhole' and more early Gallifreyan History. We also discuss Tecteun's great voyage, and TARDIS Vortex Wormholes.  </span>
+					<br> 
+					<a href="https://youtu.be/YMNdCX4KyVM" target="_blank">Ep 11: The Star Beast</a> 
+					<br> 
+					<span class="A-fanon">A look at the 60th Anniversary special, 'The Star Beast'. We also discuss stories that happened more than once, and the TARDIS Desk-Top Theme controls. </span>
 				</span>
 			</div>
 		</div>
@@ -236,7 +252,7 @@
 			<div class="section">
 				<span class="A-fanon">Greetings. I am known in these parts as Marnal Gate and this is the world's largest website on the Time Lords of Gallifrey
 					(at least on this planet). This page was originally created in March of 1998 AD.
-					<span style="font-weight: bold;">It was last updated in October of 2022 AD. The following sections have received major updates over the last year...</span>
+					<span style="font-weight: bold;">It was last updated in November of 2023 AD. The following sections have received major updates over the last year...</span>
 				</span>
 				<ul>
 					<li>
@@ -260,7 +276,7 @@
 				</ul>
 			</div>
 			<div class="section">
-				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive interest in the history of the history of the Doctor's people from before the time of Rassilon to their resurrection after the Time War with the Daleks. The idea behind this web page is to trace and collect all the little details about Time Lord biology, culture, and history that we have been given over the last half-century. I've also added a section on the Daleks (though it doesn't cover as much material as I'd like). </span>
+				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive interest in the history of the history of the Doctor's people from before the time of Rassilon to their resurrection after the Time War with the Daleks. The idea behind this web page is to trace and collect all the little details about Time Lord biology, culture, and history that we have been given over the last 60 years. </span>
 			</div>
 			<div class="section">
 				<span class="A-fanon">If you have any doubts as to the validity of the data presented, just use your mouse to click on the text. This will reveal the color coding for sources for the entire paragraph. The Quick Color Key button in the top menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> button for a somewhat more detailed description. </span>
